# zerosats

./: .dockerignore  .gitignore  GettingStarted.md  LICENSE  README.md  brattenburg-bump.md  ciphera.dockerfile  citrea.dockerfile  dev.dockerfile  package-lock.json  payy.dockerfile
ciphera/: .gitattributes  .gitignore  Cargo.toml  GettingStarted.md  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
ciphera/.cargo/: config.toml
ciphera/citrea/: .gitignore  README.md  hardhat.config.ts
ciphera/citrea/contracts/: AggregateVerifierV1.sol  BurnVerifierV1.sol  BurnVerifierV2.sol  MintVerifierV1.sol  NoopVerifier.yul  NoopVerifierHonk.sol  SocialRecovery.sol  Verifier.sol
ciphera/citrea/contracts/helper/: AliceERC20.sol
ciphera/citrea/contracts/mocks/: BoundsTestContract.sol  FailingERC20.sol  MockERC20.sol  MockVerifier.sol  ReentrantERC20.sol  RollupV2TestProxy.sol  TestRollupV1.sol
ciphera/citrea/contracts/noir/: IVerifier.sol  agg_agg_HonkVerifier.linkrefs.json  agg_final_HonkVerifier.linkrefs.json  agg_utxo_HonkVerifier.linkrefs.json  points_HonkVerifier.linkrefs.json  signature_HonkVerifier.linkrefs.json  utxo_HonkVerifier.linkrefs.json
ciphera/citrea/contracts/rollup/: RollupV1.sol
ciphera/citrea/contracts/router/: BurnToAddress.sol
ciphera/citrea/docs/: rollup-v2-upgrade-notes.md
ciphera/citrea/noir/: agg_agg.sol  agg_utxo.sol  points.sol  signature.sol  utxo.sol
ciphera/citrea/scripts/: deploy-devnet.ts  deploy-verifier.ts  deploy-verifiers-devnet.ts  deploy.ts  send-citrea-tx.ts  send-devnet-citrea-tx.ts  set-burn-substitutor.ts  set-escrow-manager.ts  set-state.ts  shared.ts  test-deployment-devnet.ts  unwrap-cbtc.ts  wrap-cbtc.ts
ciphera/citrea/test/: BlockHeightValidation.test.ts  Eip7702SimpleAccount.eip712.test.ts  Eip7702SimpleAccount.erc1271.test.ts  RollupV1.test.ts  RollupV1Debug.test.ts  RollupV2.test.ts  SocialRecovery.test.ts
ciphera/citrea/token-contracts/IUSDC.sol/: IUSDC.json
ciphera/fixtures/keys/: agg_agg_key  agg_agg_key_fields.json  agg_agg_vk_hash  agg_final_key  agg_final_key_fields.json  agg_utxo_key  agg_utxo_key_evm  agg_utxo_key_fields.json  agg_utxo_vk_hash  migrate_key_fields.json  points_key  points_key_evm  points_key_fields.json  points_vk_hash  signature32_key  signature32sha_key  signature_key  signature_key_evm  signature_key_fields.json  signature_vk_hash  utxo_key  utxo_key_evm  utxo_key_fields.json  utxo_vk_hash  vk_hash_fields.json
ciphera/fixtures/keys/migrate_key/: vk  vk_hash
ciphera/fixtures/programs/: agg_agg.json  agg_final.json  agg_utxo.json  migrate.json  points.json  signature.json  signature32.json  signature32sha.json  timelock.json  utxo.json  utxo_key
ciphera/fixtures/proofs/: agg_agg_final_evm_proof.proof  agg_utxo_1.proof
ciphera/noir/: Nargo.toml  README.md  generate_fixtures.sh  recurse.sh
ciphera/noir/agg_agg/: Nargo.toml  Prover.toml
ciphera/noir/agg_agg/src/: main.nr
ciphera/noir/agg_final/: Nargo.toml
ciphera/noir/agg_final/src/: main.nr
ciphera/noir/agg_utxo/: Prover.toml  Verifier.toml
ciphera/noir/agg_utxo/src/: main.nr
ciphera/noir/bitcoin/: Nargo.toml
ciphera/noir/bitcoin/src/: lib.nr
ciphera/noir/common/: Nargo.toml
ciphera/noir/common/src/: lib.nr
ciphera/noir/migrate/: Nargo.toml
ciphera/noir/migrate/src/: main.nr
ciphera/noir/points/: Nargo.toml
ciphera/noir/points/src/: main.nr
ciphera/noir/poseidon_alt/: Nargo.toml
ciphera/noir/poseidon_alt/src/: constants.nr  lib.nr  poseidon.nr  test.nr  test_field_snapshot.nr
ciphera/noir/signature/: Nargo.toml
ciphera/noir/signature/src/: main.nr
ciphera/noir/signature32/: Nargo.toml  Prover.toml
ciphera/noir/signature32/src/: main.nr
ciphera/noir/signature32sha/: Nargo.toml
ciphera/noir/signature32sha/src/: main.nr
ciphera/noir/signatureShamir/: Nargo.toml
ciphera/noir/signatureShamir/src/: main.nr
ciphera/noir/timelock/: Nargo.toml  Prover.toml
ciphera/noir/timelock/src/: main.nr
ciphera/noir/utxo/: Nargo.toml  Prover.toml  Verifier.toml
ciphera/noir/utxo/src/: main.nr
ciphera/noir/verifyShare/: Nargo.toml  Prover.toml
ciphera/noir/verifyShare/src/: main.nr
ciphera/pkg/atomiq/: Cargo.toml
ciphera/pkg/atomiq/src/: lib.rs
ciphera/pkg/autoplayer/: Cargo.toml
ciphera/pkg/barretenberg/: Cargo.toml  README.md
ciphera/pkg/block-store/: Cargo.toml
ciphera/pkg/burn-substitutor/: Cargo.toml  README.md
ciphera/pkg/cli/: Cargo.toml  README.md  create-absent-test-wallet.json  load-exists-test-wallet.json  scheme-http-test-wallet.json  scheme-https-test-wallet.json  test.json  v0-path-test-wallet.json
ciphera/pkg/constants/: README.md
ciphera/pkg/contracts/: Cargo.toml
ciphera/pkg/doomslug/: Cargo.toml  README.md
ciphera/pkg/element/: Cargo.toml
ciphera/pkg/eth-util/: Cargo.toml  README.md
ciphera/pkg/hash/: Cargo.toml  README.md
ciphera/pkg/hash-poseidon/: README.md
ciphera/pkg/minimal-poseidon/: Cargo.toml  README.md
ciphera/pkg/node/: Cargo.toml  README.md
ciphera/pkg/node-interface/: README.md
ciphera/pkg/p2p2/: README.md
ciphera/pkg/payy/: Cargo.toml
ciphera/pkg/primitives/: README.md
ciphera/pkg/prover/: Cargo.toml
ciphera/pkg/rpc/: Cargo.toml  README.md
ciphera/pkg/rpc-error-convert/: Cargo.toml
ciphera/pkg/smirk/: README.md
ciphera/pkg/solid/: README.md
ciphera/pkg/testutil/: README.md
ciphera/pkg/wire-message/: README.md
ciphera/pkg/wire-message-macro/: Cargo.toml  README.md
ciphera/pkg/zk-primitives/: Cargo.toml
ciphera/web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
ciphera/web/css/: terminal.css
ciphera/web/electron/: main.cjs  preload.cjs
ciphera/web/src/: main.js
payy/pkg/barretenberg/: Cargo.toml
payy/pkg/cli/: Cargo.toml  README.md
payy/pkg/contracts/: Cargo.toml
payy/pkg/hash/: Cargo.toml
payy/pkg/hash-poseidon/: Cargo.toml
payy/pkg/node-interface/: Cargo.toml
payy/pkg/p2p2/: Cargo.toml  default_config.toml
payy/pkg/primitives/: Cargo.toml
payy/pkg/smirk/: Cargo.toml
payy/pkg/solid/: Cargo.toml
payy/pkg/wire-message/: Cargo.toml
(+484 files in other folders)
