[package]
name = "block-store"
version = "1.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wire-message = { workspace = true, features = ["test-api"] }
primitives = { workspace = true }
element = { workspace = true }
borsh = { workspace = true }
strum = { workspace = true }

rocksdb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempdir = { workspace = true }
