[package]
name = "burn-substitutor"
version = "1.3.0"
edition = "2024"

[dependencies]
atomiq = { workspace = true }
contracts = { workspace = true }
element = { workspace = true }
primitives = { workspace = true }
rpc = { workspace = true }
zk-primitives = { workspace = true }
eth-util = { workspace = true }

clap = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
web3 = { workspace = true }
ethereum-types = { workspace = true }

[dev-dependencies]
