[package]
name = "eth-util"
version = "0.1.0"
edition = "2024"

[dependencies]
element = { workspace = true }
sha3 = { workspace = true }
secp256k1 = { workspace = true }
ethereum-types = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
eth-keystore = { workspace = true }
eyre = { workspace = true }
rpassword = { workspace = true }
web3 = { workspace = true }
