[package]
name = "node"
version = "1.3.0"
edition = "2024"

[dependencies]
block-store = { workspace = true }
contracts = { workspace = true }
constants = { workspace = true }
doomslug = { workspace = true }
element = { workspace = true }
node-interface = { workspace = true }
p2p2 = { workspace = true }
primitives = { workspace = true }
prover = { workspace = true }
rpc = { workspace = true }
smirk = { workspace = true }
solid = { workspace = true }
zk-primitives = { workspace = true }
testutil = { workspace = true }
burn-substitutor = { workspace = true }
barretenberg = { workspace = true }
hash = { workspace = true }

actix-cors = { workspace = true }
actix-server = { workspace = true }
actix-web = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
dirs = { workspace = true }
ethereum-types = { workspace = true }
eyre = { workspace = true }
expect-test = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rustc-hex = { workspace = true }
rocksdb = { workspace = true }
secp256k1 = { workspace = true }
sentry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tiny-keccak = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-stackdriver = { workspace = true }
tracing-subscriber = { workspace = true }
web3 = { workspace = true }
itertools = { workspace = true }
borsh = { workspace = true }
wire-message = { workspace = true }
derivative = { workspace = true }
microtype = { workspace = true }
rand_derive2 = { workspace = true }
either = { workspace = true }
tokio-postgres = { workspace = true }
postgres-native-tls = { workspace = true }
native-tls = { workspace = true }
scopeguard = { workspace = true }

[dev-dependencies]
dotenvy = { workspace = true }
reqwest = { workspace = true }
tempdir = { workspace = true }
serial_test = { workspace = true }
