[package]
name = "payy"
version = "0.1.0"
edition = "2021"

[dependencies]
element = { workspace = true }
zk-primitives = { workspace = true }
barretenberg = { workspace = true }
hash = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }
web3 = { workspace = true }
bs58 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
noirc_abi = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
