[package]
name = "prover"
version = "1.3.0"
edition = "2024"

[dependencies]
barretenberg = { workspace = true }
primitives = { workspace = true }
contracts = { workspace = true }
smirk = { workspace = true }
element = { workspace = true }
zk-primitives = { workspace = true }

ethereum-types = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
secp256k1 = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
web3 = { workspace = true }
lazy_static = { workspace = true }
borsh = { workspace = true }
tokio-postgres = { workspace = true }

# TODO: why are we using this instead of hex lib?
rustc-hex = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }
