[package]
name = "zk-primitives"
version = "1.3.0"
edition = "2024"

[dependencies]
wire-message = { workspace = true }
primitives = { workspace = true }
element = { workspace = true }
hash = { workspace = true }

borsh = { workspace = true }
bitvec = { workspace = true }
bs58 = { workspace = true }
diesel = { workspace = true, optional = true, features = ["postgres", "r2d2"] }
ethnum = { workspace = true }
ff = { workspace = true }
hex = { workspace = true }
noirc_abi = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sha3 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
web3 = { workspace = true }

[dependencies.ts-rs]
workspace = true
optional = true

[features]
ts-rs = ["dep:ts-rs", "element/ts-rs", "primitives/ts-rs"]
