[package]
name = "barretenberg"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
element = { workspace = true }
zk-primitives = { workspace = true }
lazy_static = "1.4"
hash = { workspace = true }
hash-poseidon = { workspace = true }

tempfile = { workspace = true }
acvm = { workspace = true }
bn254_blackbox_solver = { workspace = true }
nargo = { workspace = true }
noirc_abi = { workspace = true }
noirc_driver = { workspace = true }
noirc_artifacts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
bb_rs = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
smirk = { workspace = true }

[[bin]]
name = "vk_hash"
path = "src/bin/vk_hash.rs"

[features]
bb_utxo = ["bb_rs"]
