[package]
name = "cli"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }

[[bin]]
name = "payy-cli"
path = "src/main.rs"