[package]
name = "cli"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
once_cell.workspace = true
element.workspace = true
rand.workspace = true
zk-primitives.workspace = true
smirk.workspace = true
hex.workspace = true
contracts.workspace = true
web3.workspace = true
use = "0.0.1-pre.0"
barretenberg.workspace = true
node-interface.workspace = true

[[bin]]
name = "payy-cli"
path = "src/main.rs"
