[package]
name = "ciphera-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
once_cell.workspace = true
element.workspace = true
rand.workspace = true
primitives.workspace = true
zk-primitives.workspace = true
smirk.workspace = true
hex.workspace = true
contracts.workspace = true
web3.workspace = true
barretenberg.workspace = true
node-interface.workspace = true
testutil.workspace = true
hash.workspace = true
secp256k1 = { workspace = true }
ethereum-types = { workspace = true }
bs58 = { workspace = true }


[[bin]]
name = "ciphera-cli"
path = "src/main.rs"
