[package]
name = "primitives"
version = "1.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
borsh = { workspace = true }
secp256k1 = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uint = { workspace = true }
parking_lot = { workspace = true }
microtype = { workspace = true }
rand_derive2 = { workspace = true }
web3 = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

[dependencies.ts-rs]
workspace = true
optional = true

[features]
ts-rs = ["dep:ts-rs"]
