[package]
name = "smirk"
version = "1.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
element = { workspace = true }
hash = { workspace = true }

bitvec = { workspace = true }
ethnum = { workspace = true }
ff = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
borsh = { workspace = true }
wire-message = { workspace = true }
strum = { workspace = true }
rayon = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
test-strategy = { workspace = true }
tempdir = { workspace = true }
benchy = { workspace = true }
hash = { workspace = true, features = ["test-api"] }
expect-test = { workspace = true }

[features]
default = ["serde"]

serde = ["dep:serde", "element/serde"]
slow-storage-tests = []

[[bench]]
name = "storage_load"
harness = false
