[package]
name = "solid"
version = "1.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
hex = { workspace = true }
libp2p-core = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
uint = { workspace = true }
borsh = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
quickcheck = { workspace = true }
rand = { workspace = true }
test-strategy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]

name = "basic"
path = "examples/basic.rs"

[[example]]

name = "multi"
path = "examples/multi.rs"
