[package]
name = "wire-message"
version = "1.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = { workspace = true }
wire-message-macro = { path = "../wire-message-macro" }
strum = { workspace = true }
strum_macros = { workspace = true }
static_assertions = { workspace = true }

[features]
test-api = []
